--- a/Analisis video-Continuo.ipynb
+++ b/Analisis video-Continuo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -37,9 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\diego\\Anaconda3\\lib\\site-packages\\numpy\\lib\\function_base.py:1128: RuntimeWarning: Mean of empty slice.\n",
+      "  avg = a.mean(axis)\n",
+      "C:\\Users\\diego\\Anaconda3\\lib\\site-packages\\numpy\\core\\_methods.py:80: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    }
+   ],
    "source": [
     "#Importar video\n",
     "\n",
@@ -137,9 +148,11 @@
     "                                   (0,0,255),\n",
     "                                    4)#añade flacha de modulo y fase\n",
     "        \n",
-    "        #imgtexto= cv2.putText(imgflecha,\"Hello World!!!\", (300,300), cv2.FONT_HERSHEY_SIMPLEX, 2, 255)#añade texto con modulo\n",
     "        \n",
-    "        cv2.imshow('frame',imgflecha)\n",
+    "        imgtexto= cv2.putText(imgflecha,\"Modulo: \"+str(moduloprom), (10,200), cv2.FONT_HERSHEY_SIMPLEX, 2, 255)#añade texto con modulo\n",
+    "        imgtexto2= cv2.putText(imgtexto,\"Angulo\"+str(anguloprom), (10,250), cv2.FONT_HERSHEY_SIMPLEX, 2, 255)#añade texto con modulo\n",
+    "        \n",
+    "        cv2.imshow('frame',imgtexto2)\n",
     "        k = cv2.waitKey(30) & 0xff\n",
     "        if k == 27:\n",
     "            break\n",
@@ -198,6 +211,26 @@
    "metadata": {},
    "source": [
     "<img src=\"vlcsnap-2018-06-13-15h54m57s177.PNG\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mod \n",
+      " ulo:5\n"
+     ]
+    }
+   ],
+   "source": [
+    "stri='Mod \\n ulo:'\n",
+    "stri2=5\n",
+    "print(stri+str(stri2))"
    ]
   },
   {
