--- a/Analisis video-Optical Flow-version 2.ipynb
+++ b/Analisis video-Optical Flow-version 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#np.linalg.norm([-2,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +23,12 @@
     "cap = cv2.VideoCapture(fileName)\n",
     "\n",
     "\n",
-    "cantidadFrames=5\n",
+    "cantidadFrames=50\n",
     "#por que se usa un tipo de video sin ningun tipo de estabilizacion, \n",
     "#el codigo funciona mejor con una cantidad muy limitada de frames\n",
     "\n",
     "\n",
-    "skipframes=300\n",
+    "skipframes=0\n",
     "#saltea una cantidad x de frames al inicio"
    ]
   },
@@ -67,8 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "mask=0\n",
@@ -111,7 +97,6 @@
     "    \n",
     "    \n",
     "    #anaizar correspodencia entre puntos buenos viejos y nuevos\n",
-    "    #limito a un maximo de \"100(x)\" los puntos\n",
     "    if actualFrame==1:\n",
     "        for a in range (0,good_old.shape[0]):#optimizar\n",
     "            puntos[a,0,:]=good_old[a]\n",
@@ -131,10 +116,6 @@
     "                #    comparar cual tiene distancia minima con el punto anterior\n",
     "                    \n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    #np.append(puntos,p1,actualFrame) #arreglo de puntos destacados \n",
     "    #time.sleep(2)#pausa para ver el programa\n",
     "    \n",
     "    # draw the tracks\n",
@@ -165,36 +146,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(100, 7, 2)"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "error",
+     "evalue": "C:\\ci\\opencv_1512688052760\\work\\modules\\highgui\\src\\window.cpp:331: error: (-215) size.width>0 && size.height>0 in function cv::imshow\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-ca222c0898cc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'asd'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mold_frame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31merror\u001b[0m: C:\\ci\\opencv_1512688052760\\work\\modules\\highgui\\src\\window.cpp:331: error: (-215) size.width>0 && size.height>0 in function cv::imshow\n"
+     ]
     }
    ],
    "source": [
-    "puntos.shape"
+    "cv2.imshow('asd',old_frame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(98, 14)"
+       "(100, 18)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,21 +213,22 @@
     "    if contador!=0:\n",
     "        modulo[pos]=mod/contador\n",
     "        angulo[pos]=ang/contador\n",
-    "\n"
+    "\n",
+    "#obtengo los mismos modulos y angulo con diferentes cantidades de muestras de frames para el mismo momento en el video"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22.20105861946757"
+       "31.418286075864934"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,16 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.780783225249452"
+       "5.771033253722857"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,12 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savetxt('puntos.out', puntos[1,:,:], delimiter=',')\n",
-    "np.savetxt('puntosLimp.out', puntosLimp[:,:], delimiter=',')"
+    "np.savetxt('puntosLimp2.out', puntosLimp2[:,:], delimiter=',')"
    ]
   },
   {
@@ -367,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
