--- a/Analisis video-Meanshift .ipynb
+++ b/Analisis video-Meanshift .ipynb
@@ -1,29 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Necessary python packages:\n",
-    "cv2        -- OpenCV python bindings\n",
-    "numpy      -- Array library used for manipulating data \n",
-    "\n",
-    "The following python packages are necessary to use the video.analysis package:\n",
-    "scipy      -- for manipulating images\n",
-    "shapely    -- for manipulating shapes\n",
-    "\n",
-    "Optional python packages:\n",
-    "tqdm      -- for showing a progress bar while iterating\n",
-    "sharedmem -- for showing the debug video in a separate process while iterating\n",
-    "json      -- for parsing output of ffprobe\n",
-    "\n",
-    "Note that this package uses the `fcntl` package and thus only works reliably\n",
-    "on UNIX systems."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,21 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Importar video\n",
     "\n",
     "#fileName='vistacerca.mp4'\n",
-    "#fileName='vistalejos.mp4'\n",
-    "fileName='playa3.mp4'\n",
+    "fileName='vistalejos.mp4'\n",
+    "#fileName='playa3.mp4'\n",
     "cap = cv2.VideoCapture(fileName)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
